--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -11,6 +11,16 @@
     padding: 25px;
   }
 
+  .welcome-text {
+    font-size: 30px;
+    padding: 0 0 0 50px;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: baseline;
+    justify-content: flex-start;
+  }
+
   .options {
     width: 50%;
     height: 100%;
