--- a/src/pages/homepage/homepage.styles.scss
+++ b/src/pages/homepage/homepage.styles.scss
@@ -2,5 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px 80px;
+  justify-content: center;
+  padding-top: 10px;
 }
