--- a/src/pages/empty-page/empty-page.styles.scss
+++ b/src/pages/empty-page/empty-page.styles.scss
@@ -1,8 +1,11 @@
 .empty-page {
   width: 100%;
-  height: 100%;
+  height: 700px;
 
   .text {
+    font-size: 25px;
+    justify-content: center;
+    display: flex;
     width:100%;
     height:100%;
   }
